$Id$

Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V4.0beta9
~~~~~~~~~~~~~~~~~~~~

  o Track Event page: to trigger the Init function, GP16 has to be pressed for
    2 seconds (a message will be displayed to inform about this)

  o fixed various minor bugs


MIDIboxSEQ V4.0beta8
~~~~~~~~~~~~~~~~~~~~

  o now your MIDIbox SEQ can play MIDI files, either exclusively or in parallel to
    the 16 sequencer tracks.

    MIDI files have to be copied into the /midi directory of your SD Card.

    To select a MIDI file, go to the UTIL->DISK->PLAY page, and select
    the desired modes (Exclusive/Parallel and Loop on/off)

  o MIDI file import and export prepared in UI, but not implemented yet!

  o MIDI port used to send a SysEx dump now selectable in file list browser

  o fixed various minor bugs


MIDIboxSEQ V4.0beta7
~~~~~~~~~~~~~~~~~~~~

  o a new label editor allows to enter track and pattern names so fast and easy
    like typing a SMS on a mobile phone. Use the first 10 GP buttons or encoders
    to cycle the characters (like on a telephone keypad), and the remaining
    buttons/encoders to select a character directly, move the cursor, delete/insert
    characters, selecting a preset (with the encoder) and to exit the editor.

  o implemented synchronous pattern change after x steps (x=1..256)
    This function has to be enabled in the UTIL->OPT page.
    The same number of steps is used for the Synch-to-Measure function.

  o implemented Follow Song mode. It has to be enabled in UTIL->OPT menu.

  o a warning message will be print if Synch-to-Measure is enabled, and a 
    track length greater than steps per measure is selected.

  o CC number selected in Track Event and LFO Configuration page now has to be
    confirmed with GP button below the appr. item.
    A warning message will pop up to notify about this unusual data entry method.