@@ -19,7 +19,6 @@
 /////////////////////////////////////////////////////////////////////////////
 
 typedef enum {
-  SEQ_MIDPLY_MODE_Off,
   SEQ_MIDPLY_MODE_Exclusive,
   SEQ_MIDPLY_MODE_Parallel
 } seq_midply_mode_t;
@@ -39,11 +38,16 @@ extern s32 SEQ_MIDPLY_Init(u32 mode);
 extern seq_midply_mode_t SEQ_MIDPLY_ModeGet(void);
 extern s32 SEQ_MIDPLY_ModeSet(seq_midply_mode_t mode);
 
+extern s32 SEQ_MIDPLY_RunModeGet(void);
+s32 SEQ_MIDPLY_RunModeSet(u8 on, u8 synched_start);
+
 extern s32 SEQ_MIDPLY_LoopModeGet(void);
 extern s32 SEQ_MIDPLY_LoopModeSet(u8 loop_mode);
 
 extern mios32_midi_port_t SEQ_MIDPLY_PortGet(void);
 extern s32 SEQ_MIDPLY_PortSet(mios32_midi_port_t port);
+
+extern u32 SEQ_MIDPLY_SynchTickGet(void);
 
 extern s32 SEQ_MIDPLY_PlayFile(char *path);
 
@@ -52,7 +56,7 @@ extern char *SEQ_MIDPLY_PathGet(void);
 extern s32 SEQ_MIDPLY_Reset(void);
 extern s32 SEQ_MIDPLY_PlayOffEvents(void);
 extern s32 SEQ_MIDPLY_Reset(void);
-extern s32 SEQ_MIDPLY_SongPos(u16 new_song_pos);
+extern s32 SEQ_MIDPLY_SongPos(u16 new_song_pos, u8 from_midi);
 extern s32 SEQ_MIDPLY_Tick(u32 bpm_tick);
 
 
